@startuml iluminacion

class Humano

class Foco{
    + Encender()
    +Apagar()
    -EsdadoFoco estado
    +EstadoFoco MostrarEstado()

}
class SerieNavidad{
    -Foco focos[10]    
    +Encender()
    +Apagar()
    +ImprimirSerie()
}


class EstadoFoco{

}
SerieNavidad "1"*--"10" Foco

Humano o-- Foco

Humano o-- SerieNavidad

Foco *-- EstadoFoco

EstadoFoco --|> bool






@enduml